[package]
name = "minecraft_myip"
version = "0.1.0"
authors = ["PineBale"]
edition = "2021"
rust-version = "1.89.0"
readme = "README.md"
license-file = "LICENSE"
publish = false

[dependencies]
character_delight = { git = "https://github.com/PineBale/CharacterDelight-Rust.git", tag = "0.1.0" }
mcping = { git = "https://github.com/PineBale/MCPing-Rust.git", tag = "0.1.0" }
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "chrono", "time", "local-time"] }
time = { version = "0.3.47", features = ["macros"] }